<resources>
    <string name="app_name">morina</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="transport"><b>TRANSPORT</b></string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="booking">Booking</string>
    <string name="notification">Notification</string>
    <string name="payment">Payment</string>
    <string name="coupon">Coupon</string>
    <string name="help_center">Help Center</string>
    <string name="settings">Settings</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="tab_text_1">Active</string>
    <string name="tab_text_2">History</string>
    <string name="taxi_app"><b>Taxi App</b></string>
    <string name="num"><b>033 466 0888</b></string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required for the app to work.</string>
    <string name="location_permission_denied">Application requires location permission. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for the app.</string>

</resources>